# rfgrep

./: CHANGELOG.md  Cargo.toml  Dockerfile  INSTALLATION_GUIDE.md  README.md  optim.md
.github/workflows/: bench.yml  ci.yml
benches/: simd_performance.rs
man/: rfgrep.1
scripts/: extract_benchmark_results.sh  generate_flamegraph.sh  profile_benchmarks.sh  quick_profile.sh  run_comprehensive_benchmarks.sh  setup_snap_credentials.sh  update_readme_benchmarks.sh
snap/: snapcraft.yaml
src/: app_simple.rs  archive.rs  cli.rs  cli_config.rs  compression.rs  config.rs  lib.rs  main.rs  output_formats.rs  processor.rs  search_algorithms.rs  simd.rs  streaming_search.rs  tui.rs  walker.rs
src/app/: filters.rs  mod.rs  stdin.rs
src/test_utils/: data_generator.rs
tests/: performance_regression_test.rs  property_tests.proptest-regressions  property_tests.rs  stdin_integration_test.rs  worker_timeout.rs
