[package]
name = "rfgrep"
version = "0.4.0"
edition = "2021"
description = "Advanced recursive file grep utility with comprehensive file type classification - search, list, and analyze 153+ file formats with intelligent filtering and safety policies"
homepage = "https://github.com/kh3rld/rfgrep"
license = "BSD-3-Clause" 
authors = ["Khalid Hussein <kherld.hussein@gmail.com>"]
repository = "https://github.com/kh3rld/rfgrep"
documentation = "https://docs.rs/rfgrep"
readme = "README.md"
keywords = [
    "grep",
    "search",
    "filesystem",
    "cli",
    "text-processing",
]
categories = [
    "command-line-utilities",
    "filesystem",
    "text-processing"
]

[badges]
maintenance = { status = "actively-developed" }
github = { repository = "kh3rld/rfgrep", workflow = "CI" }

[[bin]]
name = "rfgrep"
path = "src/main.rs"
doc = false

[dependencies]
arboard = "3.2"
is-terminal = "0.4"
byte-unit = "5.1.6"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.12"
env_logger = "0.11.8"
indicatif = { version = "0.18", features = ["improved_unicode"] }
lazy_static = "1.4"
log = "0.4"
num_cpus = "1.16"
rayon = "1.10"
crossbeam-channel = "0.5"
regex = { version = "1.11", features = ["unicode"] }
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.3"
simplelog = "0.12"
prometheus = "0.14"
hyper = { version = "1.7", features = ["full"] }
memmap2 = "0.9"
clap_complete = "4.5.60"
parking_lot = "0.12.5"
thiserror = "2.0"
infer = "0.19"
lru = "0.16"
serde_with = "3.15.1"
dirs = "6.0.0"
toml = "0.9.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
chrono = "0.4"
serde_json = "1.0.142"
ignore = "0.4.25"
nix = { version = "0.30", optional = false }
libc = "0.2"
ctrlc = "3.5"
memchr = "2.7"
aho-corasick = "1.1"
serde_yaml = "0.9"
ratatui = "0.29"
crossterm = "0.29"
atty = "0.2"
rand = { version = "0.9", optional = true }
tempfile = { version = "3.23", optional = true }
libloading = "0.8"

# Development dependencies
[dev-dependencies]
assert_cmd = "2.0" 
predicates = "3.1.3" 
tempfile = "3.23"   
rand = "0.9"
criterion = "0.7"
testing_logger = "0.1.1"
proptest = "1.9"
quickcheck = "1.0"
mockall = "0.13"

[features]
bench = ["dep:rand", "dep:tempfile"]
examples = ["dep:rand", "dep:tempfile"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "simd_performance"
harness = false
