[package]
name = "rfgrep"
version = "0.5.0"
edition = "2021"
description = "Advanced recursive file grep utility with comprehensive file type classification - search, list, and analyze 153+ file formats with intelligent filtering and safety policies"
homepage = "https://github.com/kh3rld/rfgrep"
license = "BSD-3-Clause" 
authors = ["Khalid Hussein <kherld.hussein@gmail.com>"]
repository = "https://github.com/kh3rld/rfgrep"
documentation = "https://docs.rs/rfgrep"
readme = "README.md"
keywords = [
    "grep",
    "search",
    "filesystem",
    "cli",
    "text-processing",
]
categories = [
    "command-line-utilities",
    "filesystem",
    "text-processing"
]

[badges]
maintenance = { status = "actively-developed" }
github = { repository = "kh3rld/rfgrep", workflow = "CI" }

[[bin]]
name = "rfgrep"
path = "src/main.rs"
doc = false

[dependencies]
futures = "0.3"
arboard = "3.2"
is-terminal = "0.4"
byte-unit = "5.2.0"
clap = { version = "4.5.58", features = ["derive"] }
colored = "3.1.1"
dialoguer = "0.12"
env_logger = "0.11.9"
indicatif = { version = "0.18.3", features = ["improved_unicode"] }
lazy_static = "1.4"
log = "0.4.29"
num_cpus = "1.16"
rayon = "1.10"
crossbeam-channel = "0.5"
regex = { version = "1.12.3", features = ["unicode"] }
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.3"
simplelog = "0.12"
prometheus = "0.14"
hyper = { version = "1.8.1", features = ["full"] }
memmap2 = "0.9"
clap_complete = "4.5.66"
parking_lot = "0.12.5"
thiserror = "2.0.18"
infer = "0.19"
lru = "0.16.3"
serde_with = "3.16.1"
dirs = "6.0.0"
toml = "0.9.8"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time"] }
chrono = "0.4.43"
serde_json = "1.0.149"
ignore = "0.4.25"
nix = { version = "0.31.1", optional = false }
libc = "0.2.180"
ctrlc = "3.5.2"
memchr = "2.8.0"
aho-corasick = "1.1"
serde_yaml = "0.9.34-deprecated"
ratatui = "0.30.0"
crossterm = "0.29"
atty = "0.2"
rand = { version = "0.10.0", optional = true }
tempfile = { version = "3.25.0", optional = true }
libloading = "0.9.0"

# Development dependencies
[dev-dependencies]
assert_cmd = "2.1.2" 
predicates = "3.1.4" 
tempfile = "3.25.0"   
rand = "0.10.0"
criterion = "0.8.2"
testing_logger = "0.1.1"
proptest = "1.10.0"
quickcheck = "1.1.0"
mockall = "0.14.0"

[features]
bench = ["dep:rand", "dep:tempfile"]
examples = ["dep:rand", "dep:tempfile"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "simd_performance"
harness = false
